--- a/.github/workflows/build_loop.yml
+++ b/.github/workflows/build_loop.yml
@@ -211,6 +211,20 @@ jobs:
           # Several patches may be added per submodule.
           # Adding comments (#) may be useful to easily tell the individual patches apart.
 
+          future_carbs_4h \
+          low_carb_limit \
+          high_carb_limit \
+          override_sens \
+          now_line \
+          lnl_icon \
+          watch_title \
+          2hlollipop \
+          meal_days \
+          meal_week \
+          profiles \
+          basal_lock \
+          negative_insulin \
+          remote_window
       # Patch Fastlane Match to not print tables
       - name: Patch Match Tables
         run: |
